fix: left height stretches to fit all screen sizes

--- a/frontend/src/app.module.css
+++ b/frontend/src/app.module.css
@@ -17,6 +17,7 @@
 
 .left {
     width: 20%;
+    height: 100%;
     margin-top: 5rem;
 }
 
